google translate api set up.

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -49,12 +49,77 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bN1om6V8wDEs",
+        "outputId": "528f62d6-9f79-4228-e56b-d7dee2f45b00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip uninstall googletrans"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Uninstalling googletrans-3.0.0:\n",
+            "  Would remove:\n",
+            "    /usr/local/lib/python3.7/dist-packages/googletrans-3.0.0-py3.7.egg\n",
+            "Proceed (y/n)? y\n",
+            "  Successfully uninstalled googletrans-3.0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7bvQo-_ZwLMp"
+      },
+      "source": [
+        "!pip install googletrans==3.1.0a0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qTRBWvZEt2W2",
+        "outputId": "bf21fee4-cb68-42cb-d844-f6e9b20b29f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from googletrans import Translator\n",
+        "detector = Translator()\n",
+        "english_sentence = 'The sea is a cold place.'\n",
+        "german_sentence = translator.translate(english_sentence, src='en',dest='de')\n",
+        "print(german_sentence.text)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Das Meer ist ein kalter Ort.\n"
           ],
           "name": "stdout"
         }
@@ -83,7 +148,7 @@
         "      target_word_list.append(target_word_to_append)\n",
         "len(input_word_list)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +179,7 @@
         "target_word_list = target_word_list[:1000]\n",
         "len(target_word_list)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +214,7 @@
         "from keras.optimizers import Adam\n",
         "from keras.losses import sparse_categorical_crossentropy"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +230,7 @@
         "from tensorflow.python.client import device_lib\n",
         "print(device_lib.list_local_devices())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +256,7 @@
         "german_sentences = input_word_list\n",
         "english_sentences = target_word_list"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +273,7 @@
         "    print('German sample {}:  {}'.format(sample_i + 1, german_sentences[sample_i]))\n",
         "    print('English sample {}:  {}\\n'.format(sample_i + 1, english_sentences[sample_i]))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +322,7 @@
         "input_letter_counter, input_alphabet = count_letters(german_sentences)\n",
         "target_letter_counter, output_alphabet = count_letters(english_sentences)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +337,7 @@
       "source": [
         "input_letter_counter"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +394,7 @@
       "source": [
         "input_alphabet"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +453,7 @@
         "\n",
         "tokenized_word = tokenize(\"fahrrad\", input_alphabet)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +483,7 @@
         "  return y\n",
         "padded_word = pad(tokenized_word)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +535,7 @@
         "\n",
         "preproc_german_sentences, preproc_english_sentences = preprocess(german_sentences, english_sentences, input_alphabet, output_alphabet)\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +554,7 @@
         "X_dev = tf.constant([3.0, 1.0, 2.0])\n",
         "y_dev = tf.constant([0.0, 2.0, 1.0])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +598,7 @@
       "source": [
         "pred = model.predict(X_train[:, :, np.newaxis], verbose=0)[0]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +613,7 @@
       "source": [
         "pred"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,22 +739,22 @@
         "word_int = word.astype(int)\n",
         "arr = np.delete(word_int, np.where(word_int == 0))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "dX4YydldgZK0",
-        "outputId": "9bfe929f-07b6-49bb-eb6d-d77688fbeedf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9bfe929f-07b6-49bb-eb6d-d77688fbeedf"
       },
       "source": [
         "arr"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,23 +782,23 @@
         "    if _number == number:\n",
         "        word = word + letter"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "UMEZU9F0iiVN",
-        "outputId": "e4317fa7-10b3-4844-c4bc-c562abba8b70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "e4317fa7-10b3-4844-c4bc-c562abba8b70"
       },
       "source": [
         "word"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,23 +829,23 @@
         "    if _number == number:\n",
         "        word = word + letter"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "58dWKS0BlV1q",
-        "outputId": "593ca2f1-8493-475a-ce05-035ef5834aec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "593ca2f1-8493-475a-ce05-035ef5834aec"
       },
       "source": [
         "word"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +872,7 @@
       "source": [
         "arr = X_train[42]"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -822,23 +887,23 @@
         "    if _number == number:\n",
         "        word = word + letter"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yIvUAvwZmbeK",
-        "outputId": "ddea5649-404f-494f-a121-c49a7192f877",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "ddea5649-404f-494f-a121-c49a7192f877"
       },
       "source": [
         "word"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -870,23 +935,23 @@
         "    if _number == number:\n",
         "        german_word = german_word + letter"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "CsMbTPxCm87N",
-        "outputId": "be9e2088-1732-407d-caa5-7db41841add5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "be9e2088-1732-407d-caa5-7db41841add5"
       },
       "source": [
         "german_word"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,22 +978,22 @@
       "source": [
         "pred = model.predict(X_train[:, :, np.newaxis], verbose=0)[42]"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "DVYkWg3inWFY",
-        "outputId": "77e16bef-d466-4b1b-8d15-08494a6c559a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77e16bef-d466-4b1b-8d15-08494a6c559a"
       },
       "source": [
         "pred"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +1029,7 @@
         "word_int = word.astype(int)\n",
         "# arr = np.delete(word_int, np.where(word_int == 0))"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,23 +1044,23 @@
         "    if _number == number:\n",
         "        predicted_word = predicted_word + letter"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8WKSGQ4toQ7m",
-        "outputId": "d8fb833d-495e-4dbb-f9f7-4f57926964b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "d8fb833d-495e-4dbb-f9f7-4f57926964b7"
       },
       "source": [
         "predicted_word"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,6 +1078,17 @@
           "execution_count": 87
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DZaVOJkiwJTW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
