translating fairy tale texts for corpus.

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -63,11 +63,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bN1om6V8wDEs",
-        "outputId": "528f62d6-9f79-4228-e56b-d7dee2f45b00",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bN1om6V8wDEs",
+        "outputId": "528f62d6-9f79-4228-e56b-d7dee2f45b00"
       },
       "source": [
         "!pip uninstall googletrans"
@@ -101,17 +101,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qTRBWvZEt2W2",
-        "outputId": "bf21fee4-cb68-42cb-d844-f6e9b20b29f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qTRBWvZEt2W2",
+        "outputId": "bf21fee4-cb68-42cb-d844-f6e9b20b29f9"
       },
       "source": [
         "from googletrans import Translator\n",
         "detector = Translator()\n",
         "english_sentence = 'The sea is a cold place.'\n",
         "german_sentence = translator.translate(english_sentence, src='en',dest='de')\n",
+        "\n",
         "print(german_sentence.text)"
       ],
       "execution_count": 10,
@@ -122,6 +123,129 @@
             "Das Meer ist ein kalter Ort.\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X-waNiMR3k8Z",
+        "outputId": "d49f533c-5079-4f0a-e251-ba746b87af86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import nltk\n",
+        "from nltk import tokenize\n",
+        "nltk.download('punkt')\n",
+        "\n",
+        "list_of_english_sentences = []\n",
+        "file = open('/content/gdrive/MyDrive/gerlangreconstruct/english_tales.txt','r').read()\n",
+        "list_of_english_sentences = tokenize.sent_tokenize(file)\n",
+        "print(len(list_of_english_sentences))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "2651\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zpQSacz8EPhi",
+        "outputId": "f776fd4a-6c8f-43c1-adf4-d2c4ef6dfa4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list_of_german_sentences = []\n",
+        "for english_sentence in list_of_english_sentences:\n",
+        "  german_sentence = translator.translate(english_sentence, src='en',dest='de')\n",
+        "  list_of_german_sentences.append(german_sentence.text)\n",
+        "print(len(list_of_german_sentences))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2651\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K9T6WjyyFPFG",
+        "outputId": "e2a7c026-5bf0-4aae-dc15-f27be09fdf35",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "source": [
+        "list_of_english_sentences[160]"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'But she never hit on the right one.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ExNOQU9nFVId",
+        "outputId": "f7f0416f-e17a-4d8c-b4c5-d697aaa663f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "source": [
+        "list_of_german_sentences[160]#.text"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Aber sie hat nie das Richtige getroffen.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
         }
       ]
     },
