translating german sentences to dutch and english.

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -43,13 +43,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DlpoGrbJ0udr",
-        "outputId": "0c37253c-43fc-497a-ba1e-566618392590"
+        "outputId": "8f506599-f1f2-4162-ab56-35c674d28382"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,29 +63,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bN1om6V8wDEs",
-        "outputId": "528f62d6-9f79-4228-e56b-d7dee2f45b00"
+        "id": "bN1om6V8wDEs"
       },
       "source": [
         "!pip uninstall googletrans"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Uninstalling googletrans-3.0.0:\n",
-            "  Would remove:\n",
-            "    /usr/local/lib/python3.7/dist-packages/googletrans-3.0.0-py3.7.egg\n",
-            "Proceed (y/n)? y\n",
-            "  Successfully uninstalled googletrans-3.0.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -105,17 +89,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qTRBWvZEt2W2",
-        "outputId": "bf21fee4-cb68-42cb-d844-f6e9b20b29f9"
+        "outputId": "32609cb3-1035-4301-c345-9c54e0ab78ff"
       },
       "source": [
         "from googletrans import Translator\n",
-        "detector = Translator()\n",
+        "translator = Translator()\n",
         "english_sentence = 'The sea is a cold place.'\n",
         "german_sentence = translator.translate(english_sentence, src='en',dest='de')\n",
         "\n",
         "print(german_sentence.text)"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,29 +114,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "X-waNiMR3k8Z",
-        "outputId": "d49f533c-5079-4f0a-e251-ba746b87af86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6cb0c1c8-213e-4bef-9305-952a85914711"
       },
       "source": [
         "import nltk\n",
         "from nltk import tokenize\n",
         "nltk.download('punkt')\n",
         "\n",
-        "list_of_english_sentences = []\n",
-        "file = open('/content/gdrive/MyDrive/gerlangreconstruct/english_tales.txt','r').read()\n",
-        "list_of_english_sentences = tokenize.sent_tokenize(file)\n",
-        "print(len(list_of_english_sentences))"
+        "list_of_german_sentences = []\n",
+        "file = open('/content/gdrive/MyDrive/gerlangreconstruct/german_tales.txt','r').read()\n",
+        "list_of_german_sentences = tokenize.sent_tokenize(file)\n",
+        "print(len(list_of_german_sentences))"
       ],
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
-            "2651\n"
+            "3066\n"
           ],
           "name": "stdout"
         }
@@ -161,11 +145,161 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zpQSacz8EPhi",
-        "outputId": "f776fd4a-6c8f-43c1-adf4-d2c4ef6dfa4a",
+        "id": "fZWBEY_V3hFF",
+        "outputId": "911cc13a-dde5-484f-eba4-de6c699ac6bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "import regex as re\n",
+        "count = 0\n",
+        "german_sent_list = []\n",
+        "for sentence in list_of_german_sentences:\n",
+        "  processed_sentence = re.sub(r\"\\n\", \" \", sentence)\n",
+        "  number_of_words = len(processed_sentence.split())\n",
+        "  if (number_of_words <= 16):\n",
+        "    count += 1\n",
+        "    german_sent_list.append(processed_sentence)\n",
+        "count"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1519"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GKAeqKrf5ekw"
+      },
+      "source": [
+        "dutch_sent_list = []\n",
+        "english_sent_list = []\n",
+        "for german_sentence in l_german_sentences[:100]:\n",
+        "  dutch_sentence = translator.translate(german_sentence, src='de', dest='nl')\n",
+        "  dutch_sent_list.append(dutch_sentence.text)\n",
+        "  english_sentence = translator.translate(german_sentence, src='de', dest='en')\n",
+        "  english_sent_list.append(english_sentence.text) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qS44l1s27wYF",
+        "outputId": "cd287fca-5f8b-4ab1-ba28-369bf194c3e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "german_sent_list[13]"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'„Koax, Koax, breckekekex,“ war alles, was er sagen konnte, als er das hübsche, kleine Mädchen sah.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lZCi5GzM71G4",
+        "outputId": "ed639cee-91e0-4573-b8c4-a3108ae02eda",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "dutch_sent_list[13]"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'„Koax, Koax, breckekekex,“ war alles, was er sagen konnte, als er das hübsche, kleine Mädchen sah.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OAy9nvR8m-7",
+        "outputId": "5e30f9e9-3781-4ae8-99bd-a30ac357763d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "english_sent_list[13]"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'„Koax, Koax, breckekekex,“ war alles, was er sagen konnte, als er das hübsche, kleine Mädchen sah.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zpQSacz8EPhi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f776fd4a-6c8f-43c1-adf4-d2c4ef6dfa4a"
       },
       "source": [
         "list_of_german_sentences = []\n",
@@ -174,7 +308,7 @@
         "  list_of_german_sentences.append(german_sentence.text)\n",
         "print(len(list_of_german_sentences))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,16 +323,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "K9T6WjyyFPFG",
-        "outputId": "e2a7c026-5bf0-4aae-dc15-f27be09fdf35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "e2a7c026-5bf0-4aae-dc15-f27be09fdf35"
       },
       "source": [
         "list_of_english_sentences[160]"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,16 +355,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "ExNOQU9nFVId",
-        "outputId": "f7f0416f-e17a-4d8c-b4c5-d697aaa663f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "f7f0416f-e17a-4d8c-b4c5-d697aaa663f1"
       },
       "source": [
         "list_of_german_sentences[160]#.text"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
