predicting formerly unseen sentence.

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -1019,11 +1019,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WfT7f_KoNs55",
-        "outputId": "d1210b75-ec9b-4747-daea-076ecaec5aed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WfT7f_KoNs55",
+        "outputId": "d1210b75-ec9b-4747-daea-076ecaec5aed"
       },
       "source": [
         "# AFTER 100 EPOCHS AND CHANGING NUMBER OF HIDDEN NODES TO 512 AND DROPOUT TO 0.2\n",
@@ -1046,11 +1046,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ji_kvuwTPSHW",
-        "outputId": "e86ace77-f41a-4da4-ccec-0de3f00058b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ji_kvuwTPSHW",
+        "outputId": "e86ace77-f41a-4da4-ccec-0de3f00058b0"
       },
       "source": [
         "# AFTER 100 EPOCHS AND CHANGING DROPOUT TO 0.1 (BEST MODEL YET FOR THIS DATA, 512 + 0.1)\n",
@@ -1073,11 +1073,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BmRViHftSQgX",
-        "outputId": "39601f36-bc01-455a-a8ad-9c6939d873b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BmRViHftSQgX",
+        "outputId": "39601f36-bc01-455a-a8ad-9c6939d873b9"
       },
       "source": [
         "# 100 EPOCHS, 1024, 0.1\n",
@@ -1100,11 +1100,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3YfA6AFITwWo",
-        "outputId": "1b319123-5e14-4f77-c3b2-b514929a3a96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3YfA6AFITwWo",
+        "outputId": "1b319123-5e14-4f77-c3b2-b514929a3a96"
       },
       "source": [
         "# 200 EPOCHS, 512, 0.1\n",
@@ -1190,11 +1190,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6RTDvBY2Xy4b",
-        "outputId": "e4056d3d-d578-42fa-f8c1-c3eae01e1760",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6RTDvBY2Xy4b",
+        "outputId": "e4056d3d-d578-42fa-f8c1-c3eae01e1760"
       },
       "source": [
         "index = 99\n",
@@ -1213,6 +1213,117 @@
             "The dutch sentence is: sindsdien heten alle ooievaars peter en worden ze nu nog steeds zo genoemd\n",
             "The actual german sentence is    : seitdem hießen alle störche peter und werden noch heute so genannt\n",
             "The predicted german sentence is: „laßt hießen alle störche peter und werden noch heute so genannt <empty> <empty> <empty> <empty> <empty>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aQ850WnxZKSY"
+      },
+      "source": [
+        "index_to_words = {idx: word for word, idx in english_text_tokenizer.word_index.items()}"
+      ],
+      "execution_count": 161,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JyGMflQ2ZONZ"
+      },
+      "source": [
+        "index_to_words"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bHw0obpoZTIN"
+      },
+      "source": [
+        "english_test_sentence_encoded = []\n",
+        "for word in english_test_sentence.split():\n",
+        "  number = english_text_tokenizer.word_index[word]\n",
+        "  english_test_sentence_encoded.append(number)"
+      ],
+      "execution_count": 174,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QmpMpKM8a9GO"
+      },
+      "source": [
+        "dutch_test_sentence_encoded = []\n",
+        "for word in dutch_test_sentence.split():\n",
+        "  number = dutch_text_tokenizer.word_index[word]\n",
+        "  dutch_test_sentence_encoded.append(number)"
+      ],
+      "execution_count": 175,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ppPbv0zmbUrP"
+      },
+      "source": [
+        "english_pad_sentence = pad_sequences([english_test_sentence_encoded], max_sentence_length, padding = \"post\")\n",
+        "dutch_pad_sentence = pad_sequences([dutch_test_sentence_encoded], max_sentence_length, padding = \"post\")\n",
+        "\n",
+        "\n",
+        "english_pad_sentence = english_pad_sentence.reshape(*english_pad_sentence.shape, 1)\n",
+        "dutch_pad_sentence = dutch_pad_sentence.reshape(*dutch_pad_sentence.shape, 1)"
+      ],
+      "execution_count": 176,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iMBR1wpCabFZ"
+      },
+      "source": [
+        "english_dutch_data = np.array([np.concatenate((english_pad_sentence[i], dutch_pad_sentence[i]), axis=1) for i in range(len(english_pad_sentence))])\n",
+        "print(english_dutch_data.shape)\n",
+        "print(english_dutch_data[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GI4-eJkhb03M",
+        "outputId": "0ae9bbfa-079f-4e14-8177-ef7d39f0015e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "index = 0\n",
+        "print(\"The english sentence is: {}\".format(english_test_sentence))\n",
+        "print(\"The dutch sentence is: {}\".format(dutch_test_sentence))\n",
+        "# AFTER 1 EPOCH\n",
+        "print(\"The actual german sentence is    : {}\".format(expected_german_sentence))\n",
+        "print('The predicted german sentence is: ', end=\"\")\n",
+        "print(logits_to_sentence(model.predict(english_dutch_data[index:index+1])[0], german_text_tokenizer))"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The english sentence is: the little girl was lost in the forest and suddenly a wolf appeared\n",
+            "The dutch sentence is: het kleine meisje was verdwaald in het bos en plotseling verscheen er een wolf\n",
+            "The actual german sentence is    : das kleine mädchen verirrte sich im wald und plötzlich tauchte ein wolf auf\n",
+            "The predicted german sentence is: und konnte nachts und beine ein sie mutter und beine sie <empty> nicht sie <empty> <empty>\n"
           ],
           "name": "stdout"
         }
